# tauri-react-app

./: .gitignore  README.md  app.db  package-lock.json  package.json  vite.config.ts
dbs/: app1.db  app1.db-shm  app1.db-wal  app2.db  app3.db  app4.db  app5.db  app6.db
src/: App.tsx  index.css  main.tsx
src-tauri/: .env  Cargo.toml  main.sql  private_key.txt  public_key.txt  tauri.conf.json
src-tauri/entity/: Cargo.toml  build.rs
src-tauri/entity/src/: lib.rs
src-tauri/entity/src/proto/: message.proto  message.rs
src-tauri/src/: main.rs
src-tauri/src/command/: command.rs  mod.rs
src-tauri/src/http/: command.rs  http.rs  mod.rs  secure.rs  structs.rs
src-tauri/src/sqlite/: mod.rs  sqlite.rs  structs.rs
src-tauri/src/ws/: mod.rs  ws.rs
src/admin/: AdminComponent.scss  AdminComponent.tsx  admin.scss
src/admin/chat/: ChatComponent.scss  ChatComponent.tsx  chat.scss
src/admin/room/: RoomComponent.scss  RoomComponent.tsx
src/assets/cursor/: Vertical.cur
src/assets/js/: MouseEffect.js  jinrishici.js
src/common/: constant.ts
src/components/: VditorEdit.tsx
src/dev/: README.md  palette.tsx  previews.tsx
src/entity/: Entity.ts
src/login/: LoginComponent.tsx  login.scss
