workspace = { members = ["entity"] }
[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tauri = { version = "1.5.2", features = [ "window-hide", "window-close", "window-start-dragging", "window-unmaximize", "window-maximize", "window-unminimize", "window-show", "window-minimize", "system-tray", "dialog-all", "icon-ico"] }
rodio = "0.17.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "0.20.1"
url = "2.3.1"
protobuf = "3.3.0"
window-shadows = "0.2.2"

[dependencies.entity]
path = "./entity"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
